--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -546,6 +546,7 @@
         left: -400px;
         z-index: 99;
         top: 100px;
+        top: 0;
         max-width: 344px;
         transition: .5s all;
 
@@ -595,7 +596,7 @@
             display: block;
             left: 0;
             top: 0px;
-            z-index: 10;
+            z-index: 40;
             width: 100vw;
             height: 100vh;
             background: rgba(0, 0, 0, 0.5);
@@ -614,7 +615,7 @@
     }
 
     .filter {
-        padding-bottom: 160px;
+        padding-bottom: 100px;
     }
 
     .button_delete {
