--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -276,8 +276,8 @@
                                 <div class="number_list">3</div>
                             </a>
                         </li>
-                        <li class="burger_menu">
-                            <img class="active" src="./img/svg/Burger.svg" alt="Картинка">
+                        <li class="burger_menu" >
+                            <img src="./img/svg/Burger.svg" alt="Картинка">
                             <img src="./img/svg/close.svg" alt="Картинка">
                         </li>
                     </ul>
